force-app/main/default/objects/Program__c/fields/CEU__c.field-meta.xml
<CustomField>
    <fullName>CEU__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if the program fulfills CEU requirements</description>
    <label>CEU</label>
    <type>Checkbox</type>
</CustomField>