force-app/main/default/objects/Program__c/fields/Current__c.field-meta.xml
<CustomField>
    <fullName>Current__c</fullName>
    <defaultValue>true</defaultValue>
    <description>True when currently an Atlas program</description>
    <label>Current</label>
    <type>Checkbox</type>
</CustomField>