force-app/main/default/objects/Program__c/fields/Months__c.field-meta.xml
<CustomField>
    <fullName>Months__c</fullName>
    <description>Duration in Months</description>
    <label>Months</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>