force-app/main/default/objects/Program__c/fields/Reminder__c.field-meta.xml
<CustomField>
    <fullName>Reminder__c</fullName>
    <description>Remind the contact x days before expected completion</description>
    <label>Reminder</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>