force-app/main/default/objects/Program__c/fields/Standalone__c.field-meta.xml
<CustomField>
    <fullName>Standalone__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Program isn&apos;t part of a certification program.  Program goes into &quot;Other&quot; category if checked.</description>
    <inlineHelpText>Program isn&apos;t part of a certification program.</inlineHelpText>
    <label>Standalone Program</label>
    <type>Checkbox</type>
</CustomField>