force-app/main/default/objects/Program__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CEU__c</columns>
    <columns>Months__c</columns>
    <columns>Reminder__c</columns>
    <columns>Current__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>